; ModuleID = '/home/carl/AnghaBench/tengine/src/core/extr_ngx_connection.c_ngx_tcp_nodelay.c'
source_filename = "/home/carl/AnghaBench/tengine/src/core/extr_ngx_connection.c_ngx_tcp_nodelay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32, i32, i32 }

@NGX_TCP_NODELAY_UNSET = common dso_local global i32 0, align 4
@NGX_OK = common dso_local global i32 0, align 4
@NGX_LOG_DEBUG_CORE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"tcp_nodelay\00", align 1
@IPPROTO_TCP = common dso_local global i32 0, align 4
@TCP_NODELAY = common dso_local global i32 0, align 4
@ngx_socket_errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"setsockopt(TCP_NODELAY) failed\00", align 1
@NGX_ERROR = common dso_local global i32 0, align 4
@NGX_TCP_NODELAY_SET = common dso_local global i32 0, align 4
@NGX_ERROR_IGNORE_EINVAL = common dso_local global i64 0, align 8
@NGX_ERROR_INFO = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_tcp_nodelay(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* @NGX_TCP_NODELAY_UNSET, align 4
  %9 = icmp ne i32 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @NGX_OK, align 4
  store i32 %11, i32* %2, align 4
  br label %36

12:                                               ; preds = %1
  %13 = load i32, i32* @NGX_LOG_DEBUG_CORE, align 4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 3
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @ngx_log_debug0(i32 %13, i32 %16, i32 0, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %4, align 4
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @IPPROTO_TCP, align 4
  %22 = load i32, i32* @TCP_NODELAY, align 4
  %23 = bitcast i32* %4 to i8*
  %24 = call i32 @setsockopt(i32 %20, i32 %21, i32 %22, i8* %23, i32 4)
  %25 = icmp eq i32 %24, -1
  br i1 %25, label %26, label %31

26:                                               ; preds = %12
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %28 = load i32, i32* @ngx_socket_errno, align 4
  %29 = call i32 @ngx_connection_error(%struct.TYPE_4__* %27, i32 %28, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  %30 = load i32, i32* @NGX_ERROR, align 4
  store i32 %30, i32* %2, align 4
  br label %36

31:                                               ; preds = %12
  %32 = load i32, i32* @NGX_TCP_NODELAY_SET, align 4
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 8
  %35 = load i32, i32* @NGX_OK, align 4
  store i32 %35, i32* %2, align 4
  br label %36

36:                                               ; preds = %31, %26, %10
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i32 @ngx_log_debug0(i32, i32, i32, i8*) #1

declare dso_local i32 @setsockopt(i32, i32, i32, i8*, i32) #1

declare dso_local i32 @ngx_connection_error(%struct.TYPE_4__*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
